gobmkida/g0/dragon_escape
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2201:7: error: use of undeclared identifier 'mx_initialized_1'
if ( !mx_initialized_1 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2203:26: error: use of undeclared identifier 'mx_0'
memset( mx_0, 0, sizeof( mx_0)); 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2203:9: error: use of undeclared identifier 'mx_0'
memset( mx_0, 0, sizeof( mx_0)); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2204:1: error: use of undeclared identifier 'mx_initialized_1'
mx_initialized_1 = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2212:1: error: use of undeclared identifier 'mx_0'
mx_0[ii] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2231:5: error: use of undeclared identifier 'mx_0'
&& !mx_0[ii + 20] 
    ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2243:1: error: use of undeclared identifier 'mx_0'
mx_0[ii + 20] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2246:5: error: use of undeclared identifier 'mx_0'
&& !mx_0[ii - 1] 
    ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2258:1: error: use of undeclared identifier 'mx_0'
mx_0[ii - 1] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2261:5: error: use of undeclared identifier 'mx_0'
&& !mx_0[ii - 20] 
    ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2273:1: error: use of undeclared identifier 'mx_0'
mx_0[ii - 20] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2276:5: error: use of undeclared identifier 'mx_0'
&& !mx_0[ii + 1] 
    ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2288:1: error: use of undeclared identifier 'mx_0'
mx_0[ii + 1] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2294:5: error: use of undeclared identifier 'mx_0'
&& !mx_0[ii + 19] 
    ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2304:1: error: use of undeclared identifier 'mx_0'
mx_0[ii + 19] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2308:5: error: use of undeclared identifier 'mx_0'
&& !mx_0[ii - 21] 
    ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2318:1: error: use of undeclared identifier 'mx_0'
mx_0[ii - 21] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2322:5: error: use of undeclared identifier 'mx_0'
&& !mx_0[ii - 19] 
    ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2332:1: error: use of undeclared identifier 'mx_0'
mx_0[ii - 19] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2336:5: error: use of undeclared identifier 'mx_0'
&& !mx_0[ii + 21] 
    ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2346:1: error: use of undeclared identifier 'mx_0'
mx_0[ii + 21] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2355:6: error: use of undeclared identifier 'mx_0'
if ( mx_0[queue[k]] != 1 ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/engine/dragon.c:2362:1: error: use of undeclared identifier 'mx_0'
mx_0[queue[k]] = 0; 
^
23 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/dragon_escape/src/obj/1/dragon.o] Error 1
